Added docs for new curl api

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,9 @@ theme_dir: cinder
 pages:
 - Home: index.md
 - Uploading Videos: uploading.md
+- API: api.md
 - Playing Videos: playing.md
+
 - Technology: technology.md
 
 
