--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "author": "Sam Bhattacharyya",
   "license": "MIT",
   "devDependencies": {
-    "grunt": "^1.0.1",
-    "grunt-aws-s3": "^2.0.0"
+    "grunt": "^1.3.0",
+    "grunt-aws-s3": "^2.0.0",
+    "grunt-cloudfront": "^0.2.2"
   }
 }
